@@ -25,7 +25,6 @@ IT_FIND_TOOL([FIND], [find])
 IT_FIND_TOOL([PATCH], [patch])
 IT_FIND_TOOL([TAR], [tar])
 IT_FIND_TOOL([CHMOD], [chmod])
-IT_FIND_TOOL([MD5SUM], [md5sum])
 IT_FIND_TOOL([SHA256SUM], [sha256sum])
 IT_FIND_TOOL([WGET], [wget])
 IT_FIND_TOOL([ZIP], [zip])
